# eventOrg

./: Cargo.toml  README.md  file.txt
src/: main.rs
static/: eventorganaization.sln  feed.html  index.html
static/about/: aboutfinal.html
static/category/: list.html
static/category/Entertainment/dj & host/: dj.html
static/category/Entertainment/performance/: performance.html
static/category/catrin service/Food & beverages/: food.html
static/category/catrin service/cokrey/: cockrey.html
static/category/catrin service/service counter/: service.html
static/category/manpower/security/: security.html
static/category/manpower/users(manpower)/: users.html
static/category/media/album/: album.html
static/category/media/drone/: drone.html
static/category/media/photography/: photo.html
static/category/technical & infrastructure/display/: display.html
static/category/technical & infrastructure/lighting/: light.html
static/category/technical & infrastructure/power backup/: power.html
static/category/technical & infrastructure/sound/: sound.html
static/category/transport/guest transport/: gues.html
static/category/transport/material movement/: material.html
static/category/venue setup/decoration/: deco.html  pt11.avif
static/category/venue setup/hotels venue/: venue_booking.html
static/category/venue setup/setting/: settingar.html
static/category/venue setup/stage/: stage.html
static/eventes page/music/: music.html
static/profile/: list.html  login.html  profile.html  signup.html  test.html
(+14 files in other folders)
